--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<img alt="cute dog image taken from Pinterest" src="https://in.pinterest.com/pin/933441460242763336/">
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
