--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-<img alt="cute dog image taken from Pinterest" src="https://in.pinterest.com/pin/933441460242763336/">
+<img alt="Two golden retriever puppies sitting on grass with orange flower petals" src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg">
 	
     <script type="text/javascript" src="./script.js">
 </script>
